[P1-50] fix scroll issue on iphone by changing position to fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,10 @@ html {
   font-family: inter;
 }
 
+body {
+  width: 100%;
+}
+
 main {
   margin: var(--margin);
   margin-bottom: 6rem;
